--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/product-manager
-spring.datasource.username=postgres
-spring.datasource.password=postgre
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.generate-ddl=true
 
-server.port=8081
+server.port=${APP_PORT}
+
+server.address=0.0.0.0
